--- a/server/build.gradle
+++ b/server/build.gradle
@@ -2,6 +2,27 @@ plugins {
 	id 'java'
 	id 'org.springframework.boot' version '3.1.4'
 	id 'io.spring.dependency-management' version '1.1.3'
+	id("com.diffplug.spotless") version "6.22.0"
+}
+
+spotless {
+
+	java {
+		target("**/*.java")
+
+		importOrder('java', 'javax', 'org', 'com', '')
+
+		googleJavaFormat('1.10.0').aosp()
+
+		removeUnusedImports()
+
+		trimTrailingWhitespace()
+
+		endWithNewline()
+
+		indentWithSpaces()
+	}
+
 }
 
 group = 'project.manager'
@@ -20,7 +41,9 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.boot:spring-boot-starter-jdbc'
 	compileOnly 'org.projectlombok:lombok'
+	compileOnly 'org.springframework.boot:spring-boot-configuration-processor'
 	annotationProcessor 'org.projectlombok:lombok'
+	annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
 	runtimeOnly 'com.mysql:mysql-connector-j'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
