--- a/client/package.json
+++ b/client/package.json
@@ -8,12 +8,17 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.5.1",
     "http-proxy-middleware": "^2.0.6",
+    "net": "^1.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.18.0",
     "react-quill": "2.0.0",
+    "react-router-dom": "^6.18.0",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "sockjs-client": "^1.6.1",
+    "stompjs": "^2.3.3",
+    "undici-types": "^5.27.2",
+    "web-vitals": "^2.1.4",
+    "websocket": "^1.0.34"
   },
   "proxy": "http://localhost:8080",
   "scripts": {
