--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "http-proxy-middleware": "^2.0.6",
     "net": "^1.0.2",
     "react": "^18.2.0",
+    "react-datepicker": "^4.24.0",
     "react-datetime": "^3.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.12.0",
@@ -19,6 +20,7 @@
     "react-scripts": "5.0.1",
     "sockjs-client": "^1.6.1",
     "stompjs": "^2.3.3",
+    "styled-components": "^6.1.1",
     "undici-types": "^5.27.2",
     "web-vitals": "^2.1.4",
     "websocket": "^1.0.34"
