--- a/client/package.json
+++ b/client/package.json
@@ -10,10 +10,12 @@
     "http-proxy-middleware": "^2.0.6",
     "net": "^1.0.2",
     "react": "^18.2.0",
+    "react-datepicker": "^4.24.0",
     "react-datetime": "^3.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.12.0",
     "react-js-pagination": "^3.0.3",
+    "react-modal": "^3.16.1",
     "react-quill": "2.0.0",
     "react-router-dom": "^6.18.0",
     "react-scripts": "5.0.1",
