--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,7 @@
     "react-quill": "2.0.0",
     "react-router-dom": "^6.18.0",
     "react-scripts": "5.0.1",
+    "recoil": "^0.7.7",
     "sockjs-client": "^1.6.1",
     "stompjs": "^2.3.3",
     "styled-components": "^6.1.1",
